🍱(edulib) update fragment_course_content
update fragment_course_content to version 1.5

--- a/src/backend/funmooc/templates/courses/cms/fragment_course_content.html
+++ b/src/backend/funmooc/templates/courses/cms/fragment_course_content.html
@@ -11,7 +11,7 @@
   <h2 class="course-detail__content__row__title">{% trans 'About the course' %}</h2>
   {% with header_level=3 %}
     {% page_placeholder "course_description" page or %}
-      <p>{% trans 'Enter here a short description of your course.' %}</p>
+      <p>{% trans 'Enter here a description of your course.' %}</p>
     {% endpage_placeholder %}
   {% endwith %}
 </section>
