💄(edulib) update edulib scss theme
Update edulib scss theme for the home page

--- a/src/backend/funmooc/templates/richie/base.html
+++ b/src/backend/funmooc/templates/richie/base.html
@@ -51,7 +51,7 @@
                 {% include "social-networks/footer-badges.html" %}
             </div>
             <div class="body-footer__mentions">
-                <p>{% now "Y" %} &copy; Acme {% blocktrans %}All Rights Reserved.{% endblocktrans %}</p>
+                <p>{% now "Y" %} &copy; EDUlib {% blocktrans %}All Rights Reserved.{% endblocktrans %}</p>
             </div>
             <div class="body-footer__poweredby">
                 <a href="https://github.com/openfun/richie" class="body-footer__poweredby__link">
