--- a/src/frontend/scss/_variables.scss
+++ b/src/frontend/scss/_variables.scss
@@ -23,7 +23,7 @@ $grid-gutter-width: 20px;
 
 // Use the footer bg color it seems to continue to the bottom end even with
 // page is empty, body-content bg will make the real base color for contents
-$body-bg: $dodgerblue1;
+$body-bg: $gray23;
 
 //
 // Homegrown shared settings
