--- a/src/frontend/scss/components/_content.scss
+++ b/src/frontend/scss/components/_content.scss
@@ -2,13 +2,13 @@
 $richie-body-content-background: $snow2 !default;
 
 $richie-caesura-padding: 1rem 2.5rem !default;
-$richie-caesura-button-fontcolor: $dodgerblue7 !default;
+$richie-caesura-button-fontcolor: $edulib1 !default;
 $richie-caesura-button-background: $white !default;
-$richie-caesura-button-border: 1px solid $dodgerblue5 !default;
+$richie-caesura-button-border: 1px solid $edulib1 !default;
 
-$richie-caesura-button-fontcolor-hover: $firebrick3 !default;
-$richie-caesura-button-background-hover: $white !default;
-$richie-caesura-button-border-hover: 1px solid $firebrick3 !default;
+$richie-caesura-button-fontcolor-hover: $white !default;
+$richie-caesura-button-background-hover: $edulib3 !default;
+$richie-caesura-button-border-hover: 1px solid $edulib3 !default;
 
 .body-content {
   background: $richie-body-content-background;
