--- a/src/frontend/scss/objects/_category_glimpses.scss
+++ b/src/frontend/scss/objects/_category_glimpses.scss
@@ -17,7 +17,7 @@ $richie-category-glimpse-container-width-xl: 16.6667% !default;
 $richie-category-glimpse-container-gutter: 0.5rem !default;
 $richie-category-glimpse-container-background: $white !default;
 $richie-category-glimpse-container-border: 1px solid rgba($black, 0.125) !default;
-$richie-category-glimpse-container-border-hover: 1px solid $firebrick6 !default;
+$richie-category-glimpse-container-border-hover: 1px solid $edulib5 !default;
 $richie-category-glimpse-container-border-radius: 0.25rem !default;
 
 $richie-category-glimpse-content-fontsize: 0.9rem !default;
