--- a/src/frontend/scss/templates/courses/plugins/_licence_plugin.scss
+++ b/src/frontend/scss/templates/courses/plugins/_licence_plugin.scss
@@ -1,7 +1,7 @@
 $richie-licence-plugin-breakpoint: sm !default;
 $richie-licence-plugin-logo-width: 100px !default;
 $richie-licence-plugin-title-fontsize: 1.4rem !default;
-$richie-licence-plugin-title-fontcolor: $dodgerblue5 !default;
+$richie-licence-plugin-title-fontcolor: $edulib1 !default;
 $richie-licence-plugin-description-fontcolor: $gray40 !default;
 $richie-licence-plugin-wrapper-spacing: 10px;
 
