--- a/src/frontend/scss/components/_footer.scss
+++ b/src/frontend/scss/components/_footer.scss
@@ -2,9 +2,9 @@
 
 $richie-footer-padding: 0 1rem !default;
 $richie-footer-fontcolor: $white !default;
-$richie-footer-background: $dodgerblue1 !default;
+$richie-footer-background: $gray23 !default;
 
-$richie-footer-menu-border: 1px solid lighten($dodgerblue1, 10%) !default;
+$richie-footer-menu-border: 1px solid lighten($gray23, 10%) !default;
 
 $richie-footer-menu-item-margin: 0 !default;
 $richie-footer-menu-item-padding: 0 !default;
@@ -14,7 +14,7 @@ $richie-footer-menu-item-padding-lg: 0 !default;
 $richie-footer-menu-link-padding: 1rem 0.8rem !default;
 $richie-footer-menu-link-fontweight: bold !default;
 $richie-footer-menu-link-fontcolor: $white !default;
-$richie-footer-menu-link-fontcolor-hover: $dodgerblue7 !default;
+$richie-footer-menu-link-fontcolor-hover: $edulib5 !default;
 
 $richie-footer-brand-padding: 1rem 0 !default;
 $richie-footer-mentions-padding: 1rem 0 !default;
@@ -93,7 +93,7 @@ $richie-footer-poweredby-link-fontcolor: $white !default;
       display: block;
       margin-left: 1rem;
       font-size: 2.4rem;
-      color: $gray40;
+      color: $gray73;
 
       &:hover {
         color: $white;
