--- a/src/frontend/scss/components/_header.scss
+++ b/src/frontend/scss/components/_header.scss
@@ -7,8 +7,8 @@ $richie-topbar-background: $white !default;
 
 $richie-topbar-hamburger-padding: 0 1rem !default;
 $richie-topbar-hamburger-fontsize: 2rem !default;
-$richie-topbar-hamburger-fontcolor: $dodgerblue7 !default;
-$richie-topbar-hamburger-fontcolor-hover: $dodgerblue7 !default;
+$richie-topbar-hamburger-fontcolor: $edulib1 !default;
+$richie-topbar-hamburger-fontcolor-hover: $edulib1 !default;
 
 $richie-topbar-brand-height: rem-calc(60px) !default;
 $richie-topbar-brand-padding: 0 0.4rem !default;
@@ -17,8 +17,8 @@ $richie-topbar-menu-list-margin: 0 !default;
 $richie-topbar-menu-list-padding: 0 !default;
 
 $richie-topbar-menu-list-fontcolor: $white !default;
-$richie-topbar-menu-list-fontcolor-lg: $dodgerblue7 !default;
-$richie-topbar-menu-list-background: $dodgerblue7 !default;
+$richie-topbar-menu-list-fontcolor-lg: $edulib1 !default;
+$richie-topbar-menu-list-background: $edulib1 !default;
 $richie-topbar-menu-list-background-lg: transparent !default;
 
 $richie-topbar-menu-item-margin: 0 !default;
@@ -38,27 +38,27 @@ $richie-topbar-menu-link-fontsize-lg: 1rem !default;
 $richie-topbar-menu-link-fontcolor-lg: inherit !default;
 
 $richie-topbar-menu-link-fontcolor-hover: $white !default;
-$richie-topbar-menu-link-background-hover: lighten($dodgerblue7, 2%) !default;
+$richie-topbar-menu-link-background-hover: $edulib3 !default;
 
 $richie-topbar-menu-item-active-fontweight: bold !default;
 $richie-topbar-menu-item-active-border: rem-calc(4px) solid
-  lighten($dodgerblue7, 8%) !default;
+  lighten($edulib3, 10%) !default;
 $richie-topbar-menu-item-active-fontweight-lg: bold !default;
 $richie-topbar-menu-item-active-border-height-lg: rem-calc(3px) !default;
-$richie-topbar-menu-item-active-border-color-lg: $dodgerblue7 !default;
+$richie-topbar-menu-item-active-border-color-lg: $edulib1 !default;
 
 $richie-topbar-menu-cta-fontcolor: $white !default;
 $richie-topbar-menu-cta-fontweight: bold !default;
-$richie-topbar-menu-cta-background: $firebrick6 !default;
+$richie-topbar-menu-cta-background: $edulib3 !default;
 
-$richie-topbar-menu-cta-hollow-fontcolor: $firebrick6 !default;
+$richie-topbar-menu-cta-hollow-fontcolor: $edulib5 !default;
 $richie-topbar-menu-cta-hollow-fontweight: bold !default;
 $richie-topbar-menu-cta-hollow-background: $white !default;
 
-$richie-topbar-menu-divider-border: 1px solid $dodgerblue5 !default;
+$richie-topbar-menu-divider-border: 1px solid $edulib3 !default;
 $richie-topbar-menu-divider-border-lg: 0 !default;
 
-$richie-topbar-menu-item-divider-border: 1px solid $dodgerblue5 !default;
+$richie-topbar-menu-item-divider-border: 1px solid $edulib3 !default;
 $richie-topbar-menu-item-divider-border-lg: 1px solid $white !default;
 
 .topbar {
