--- a/src/frontend/scss/templates/core/social-networks/_social-networks.scss
+++ b/src/frontend/scss/templates/core/social-networks/_social-networks.scss
@@ -11,12 +11,12 @@
     flex-direction: column;
     justify-content: center;
     color: $white;
-    background: $firebrick6;
+    background: $edulib5;
     border-radius: 100%;
     text-align: center;
 
     &:hover {
-      color: $firebrick6;
+      color: $edulib5;
       background: $white;
       text-decoration: none;
     }
