--- a/src/frontend/scss/templates/courses/cms/_person_detail.scss
+++ b/src/frontend/scss/templates/courses/cms/_person_detail.scss
@@ -61,6 +61,7 @@ $richie-person-detail-media-size: 10rem;
       }
 
       &__categories {
+        display: flex;
         margin: 0 0 0.5rem;
       }
     }
