--- a/src/backend/funmooc/templates/richie/base.html
+++ b/src/backend/funmooc/templates/richie/base.html
@@ -19,7 +19,7 @@
                 <button class="topbar__hamburger"
                         data-target="main-menu" aria-label="menu" aria-expanded="false">&#8801;</button>
                 <a href="/" class="topbar__brand__link">
-                    <img src="{% static "images/logo.png" %}" class="topbar__brand__logo" alt="{{ SITE.name }}">
+                    <img src="{% static "images/edulib_bleu.png" %}" class="topbar__brand__logo" alt="{{ SITE.name }}">
                 </a>
             </div>
             <div class="topbar__menu">
@@ -46,7 +46,7 @@
             </div>
             <div class="body-footer__brand">
                 <a href="/" class="body-footer__brand__link">
-                    <img src="{% static "images/logo.png" %}" class="body-footer__brand__logo" alt="">
+                    <img src="{% static "images/edulib_blanc.png" %}" class="body-footer__brand__logo" alt="">
                 </a>
                 {% include "social-networks/footer-badges.html" %}
             </div>
