--- a/src/backend/funmooc/templates/richie/base.html
+++ b/src/backend/funmooc/templates/richie/base.html
@@ -31,12 +31,6 @@
                     </ul>
                     <ul class="topbar__menu__list topbar__menu__list--aside">
                         {% language_chooser "menu/language_menu.html" %}
-                        <li class="topbar__menu__list__item topbar__menu__list__item--cta-hollow">
-                            <a class="topbar__menu__list__item__link" href="https://cours.edulib.org/register?next=/dashboard">{% trans "Sign up" %}</a>
-                        </li>
-                        <li class="topbar__menu__list__item topbar__menu__list__item--cta">
-                            <a class="topbar__menu__list__item__link" href="https://cours.edulib.org/login?next=/dashboard">{% trans "Login" %}</a>
-                        </li>
                     </ul>
                 </div>
             </nav>
@@ -55,18 +49,26 @@
                 </div>
                 <div class="body-footer__brand">
                     <a href="/" class="body-footer__brand__link">
-                        <img src="{% static "images/edulib_blanc.png" %}" class="body-footer__brand__logo" alt="">
+                        <img src="{% static "images/ed-fr_bleu.png" %}" class="body-footer__brand__logo" alt="">
                     </a>
-                    {% include "social-networks/footer-badges.html" %}
                 </div>
                 <div class="body-footer__mentions">
-                    <p>{% now "Y" %} &copy; EDUlib {% trans "All Rights Reserved." %}</p>
+                    <p>{% now "Y" %} &copy; HEC Montréal - École des dirigeants {% trans "All Rights Reserved." %}</p>
                 </div>
                 <div class="body-footer__poweredby">
-                    <a href="https://github.com/openfun/richie" class="body-footer__poweredby__link">
-                        <small>Powered by</small>
-                        <strong>Richie</strong>
-                    </a>
+                    <p>
+                        <a href="https://cours.edulib.org" class="body-footer__poweredby__link">
+                            <small>Hosted by</small>
+                            <strong>EDUlib</strong>
+                        </a>
+                    </p>
+                    <br>
+                    <p>
+                        <a href="https://github.com/openfun/richie" class="body-footer__poweredby__link">
+                            <small>Powered by</small>
+                            <strong>Richie</strong>
+                        </a>
+                    </p>
                 </div>
             </div>
             {% endblock body_footer %}
