--- a/src/backend/funmooc/templates/richie/base.html
+++ b/src/backend/funmooc/templates/richie/base.html
@@ -28,6 +28,12 @@
                 </ul>
                 <ul class="topbar__menu__list topbar__menu__list--aside">
                     {% language_chooser "menu/language_menu.html" %}
+                    <li class="topbar__menu__list__item topbar__menu__list__item--cta-hollow">
+                        <a class="topbar__menu__list__item__link" href="https://cours.edulib.org/register?next=/dashboard">{% trans "Sign up" %}</a>
+                    </li>
+                    <li class="topbar__menu__list__item topbar__menu__list__item--cta">
+                        <a class="topbar__menu__list__item__link" href="https://cours.edulib.org/login?next=/dashboard">{% trans "Login" %}</a>
+                    </li>
                 </ul>
             </div>
         </nav>
