💄(edulib) update edulib frontend to v1.8
replace frontend with v1.8 files keeping EDUlib edits

--- a/src/frontend/scss/objects/_course_glimpses.scss
+++ b/src/frontend/scss/objects/_course_glimpses.scss
@@ -34,6 +34,8 @@ $richie-course-glimpse-content-fontsize: 0.9rem !default;
 $richie-course-glimpse-content-fontcolor: $gray40 !default;
 $richie-course-glimpse-content-textalign: center !default;
 
+$richie-course-glimpse-icon-size: 2rem !default;
+
 $richie-course-glimpse-title-fontsize: 1rem !default;
 $richie-course-glimpse-title-fontweight: bold !default;
 $richie-course-glimpse-title-fontcolor: $edulib1 !default;
@@ -114,10 +116,74 @@ $richie-course-glimpse-foot-cta-background-hover: $edulib5 !default;
   // Apply gutter
   margin: $richie-course-glimpse-container-gutter;
 
+  &__icon {
+    z-index: 0;
+    display: flex;
+    overflow: hidden;
+
+    &__band {
+      $end-triangle-height: $richie-course-glimpse-icon-size;
+      $end-triangle-width: $end-triangle-height * 0.8656; // to get an equilateral triangle
+
+      flex-grow: 1;
+      align-self: center;
+      position: relative;
+      background: inherit;
+      height: $richie-course-glimpse-icon-size;
+      margin-right: $end-triangle-width;
+      color: white;
+      text-align: right;
+      line-height: $richie-course-glimpse-icon-size;
+      padding-right: 0.5rem;
+      font-weight: 700;
+      font-size: 85%;
+
+      // Add a triangle at the end of the band
+      &__end {
+        width: 0;
+        height: 0;
+        border-top: $end-triangle-height / 2 solid transparent;
+        border-bottom: $end-triangle-height / 2 solid transparent;
+        border-left: $end-triangle-width solid transparent; // This color is set through HTML
+        position: absolute;
+        top: 0;
+        right: -$end-triangle-width;
+
+        // Fix band-triangle border glitch with an overlapping triangle
+        &::after {
+          content: '';
+          width: 0;
+          height: 0;
+          border-top: $end-triangle-height / 2 solid transparent;
+          border-bottom: $end-triangle-height / 2 solid transparent;
+          border-left: $end-triangle-width solid transparent; // This color is set through HTML
+          border-left-color: inherit;
+          position: absolute;
+          top: -$end-triangle-height / 2;
+          right: 0;
+        }
+      }
+    }
+
+    img {
+      width: $richie-course-glimpse-icon-size + (2 * 0.5rem);
+      height: $richie-course-glimpse-icon-size;
+      padding: 0 0.5rem;
+    }
+  }
+
   &__content {
     font-size: $richie-course-glimpse-content-fontsize;
     color: $richie-course-glimpse-content-fontcolor;
     text-align: $richie-course-glimpse-content-textalign;
+
+    margin-top: $richie-course-glimpse-icon-size / 2;
+    margin-bottom: $richie-course-glimpse-icon-size / 2;
+
+    .course-glimpse__icon + & {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
 
     &__title {
       font-size: $richie-course-glimpse-title-fontsize;
