--- a/src/frontend/js/components/SearchLoader/_SearchLoader.scss
+++ b/src/frontend/js/components/SearchLoader/_SearchLoader.scss
@@ -7,8 +7,8 @@
 
 .search-loader {
   border: 0.125rem solid transparent;
-  border-left-color: $edulib5;
-  border-top-color: $edulib5;
+  border-left-color: $dodgerblue5;
+  border-top-color: $dodgerblue5;
   border-radius: 50%;
   width: 3rem;
   height: 3rem;
