--- a/src/frontend/scss/templates/courses/cms/_course_detail.scss
+++ b/src/frontend/scss/templates/courses/cms/_course_detail.scss
@@ -19,7 +19,7 @@ $richie-course-detail-row-padding: 0.5rem 1rem 0 !default;
 $richie-course-detail-row-fontsize: 0.95rem !default;
 $richie-course-detail-row-title-fontcolor: $edulib3 !default;
 
-$richie-course-detail-categories-padding: 0.5rem 1rem 0 !default;
+$richie-course-detail-categories-padding: 0 3rem 0 !default;
 $richie-course-detail-categories-justify: center !default;
 $richie-course-detail-categories-empty-fontcolor: $gray40 !default;
 $richie-course-detail-categories-empty-textalign: center !default;
@@ -92,7 +92,7 @@ $richie-course-detail-aside-main-org-background: $white !default;
       text-align: center;
 
       &__date {
-        color: $dodgerblue7;
+        color: $edulib3;
       }
     }
 
