--- a/src/frontend/scss/templates/courses/plugins/_category_plugin.scss
+++ b/src/frontend/scss/templates/courses/plugins/_category_plugin.scss
@@ -1,25 +1,45 @@
-$richie-category-plugin-tag-margin: 0 0 0.3rem 0;
 $richie-category-plugin-tag-padding: 0.25rem 0.4rem;
-$richie-category-plugin-tag-fontsize: 0.7rem;
 $richie-category-plugin-tag-fontcolor: $white;
 $richie-category-plugin-tag-background: $gray7;
-$richie-category-plugin-tag-divider-margin: 0.3rem;
 
 .category-plugin-tag {
   flex-grow: 0;
   flex-shrink: 0;
-  margin: $richie-category-plugin-tag-margin;
-  padding: $richie-category-plugin-tag-padding;
-  font-size: $richie-category-plugin-tag-fontsize;
   color: $richie-category-plugin-tag-fontcolor;
-  background: $richie-category-plugin-tag-background;
+  margin-left: 0.5rem;
+  margin-top: 0.5rem;
   text-decoration: none;
 
   &:hover {
     color: $richie-category-plugin-tag-fontcolor;
   }
 
-  & + & {
-    margin-left: $richie-category-plugin-tag-divider-margin;
+  &:first-of-type {
+    margin-left: 0;
+  }
+
+  &__title {
+    padding: $richie-category-plugin-tag-padding;
+    background: $richie-category-plugin-tag-background;
+  }
+
+  &__figure {
+    display: flex;
+    margin: 0;
+
+    &__caption {
+      align-self: flex-end;
+      background: $richie-category-plugin-tag-background;
+      padding: $richie-category-plugin-tag-padding;
+      color: inherit;
+      white-space: nowrap;
+    }
+
+    &__image {
+      height: 2rem;
+      padding: 0;
+      border: 1px solid $gray80;
+      border-left: none;
+    }
   }
 }
