Make footer primarily french

--- a/src/backend/funmooc/templates/richie/base.html
+++ b/src/backend/funmooc/templates/richie/base.html
@@ -58,14 +58,14 @@
                 <div class="body-footer__poweredby">
                     <p>
                         <a href="https://cours.edulib.org" class="body-footer__poweredby__link">
-                            <small>Hosted by</small>
+                            <small>Hébergé par</small>
                             <strong>EDUlib</strong>
                         </a>
                     </p>
                     <br>
                     <p>
                         <a href="https://github.com/openfun/richie" class="body-footer__poweredby__link">
-                            <small>Powered by</small>
+                            <small>Propulsé par</small>
                             <strong>Richie</strong>
                         </a>
                     </p>
