--- a/src/frontend/scss/templates/richie/large_banner/_large_banner.scss
+++ b/src/frontend/scss/templates/richie/large_banner/_large_banner.scss
@@ -33,20 +33,20 @@
 
   &__body {
     position: relative; // Needed to support img-as-a-background-image
-    text-align: center;
 
     &__title {
       margin: 0 0.5rem 0 0; // Leave some margin between title & logo
 
       // Adjust text size for smaller screens
-      font-size: 2rem;
+      font-size: 1.5rem;
+      text-align: center;
 
       @include media-breakpoint-up(sm) {
-        font-size: 3rem;
+        font-size: 2rem;
       }
 
       @include media-breakpoint-up(md) {
-        font-size: 4rem;
+        font-size: 2.5rem;
       }
     }
 
@@ -55,13 +55,16 @@
 
       // Adjust logo size for smaller screens
       max-width: 10rem;
+      max-height: 5rem;
 
       @include media-breakpoint-up(sm) {
-        max-width: 15rem;
+        max-width: 11.25rem;
+        max-height: 5.625rem;
       }
 
       @include media-breakpoint-up(md) {
-        max-width: 25rem;
+        max-width: 12.5rem;
+        max-height: 6.25rem;
       }
     }
   }
