--- a/src/frontend/scss/templates/richie/section/_section.scss
+++ b/src/frontend/scss/templates/richie/section/_section.scss
@@ -1,8 +1,8 @@
-$richie-section-cadenced-padding: 0.5rem 0 !default;
+$richie-section-cadenced-padding: 3rem 0 !default;
 $richie-section-cadenced-background-even: $white !default;
 $richie-section-cadenced-background-odd: $snow2 !default;
 $richie-section-cadenced-title-color: $gray17 !default;
-$richie-section-cadenced-title-margin: 0 auto !default;
+$richie-section-cadenced-title-margin: 0 auto 1rem !default;
 $richie-section-cadenced-title-padding: 1rem !default;
 
 .section-container-cadenced {
@@ -41,6 +41,7 @@ $richie-section-cadenced-title-padding: 1rem !default;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin: 0 -0.5rem;
 
     // Some elements have to take 100% by default
     .section-container-cadenced & > p,
@@ -56,7 +57,7 @@ $richie-section-cadenced-title-padding: 1rem !default;
       flex-grow: 1;
       flex-shrink: 0;
       flex-basis: 100%;
-      margin: 0.5rem;
+      margin: 2rem 0.5rem 0;
     }
   }
 }
