💄(edulib) update theme to richie 1.10
update theme to richie 1.10 but maintain font icons.

--- a/src/frontend/scss/_utils.scss
+++ b/src/frontend/scss/_utils.scss
@@ -4,3 +4,8 @@
   position: absolute;
   left: -9999rem;
 }
+
+// Helper to force svg icons to be blocks by default for convenience at call sites
+.icon {
+  display: block;
+}
