--- a/src/backend/funmooc/templates/richie/large_banner/large_banner.html
+++ b/src/backend/funmooc/templates/richie/large_banner/large_banner.html
@@ -14,5 +14,8 @@
         {% if instance.logo %}
             <img src="{% thumbnail instance.logo 1280x400 crop='smart' %}" class="large-banner__logo" alt="{{ instance.logo_alt_text }}"/>
         {% endif %}
+        {% if instance.content %}
+            <div class="large-banner__content">{{ instance.content|safe }}</div>
+        {% endif %}
     </div>
 </div>
