--- a/src/backend/funmooc/templates/courses/cms/course_detail.html
+++ b/src/backend/funmooc/templates/courses/cms/course_detail.html
@@ -1,10 +1,21 @@
 {% extends "richie/fullwidth.html" %}
 {% load cms_tags i18n extra_tags thumbnail %}
 
-{% block meta %}
-{# Make sure course snapshot pages are not indexed by search engines #}
-{% if current_page.parent_page.course %}<meta name="robots" content="noindex">{% endif %}
-{% endblock meta %}
+{% block breadcrumbs %}{% endblock breadcrumbs %}
+
+{% block meta_index_rules %}
+    {# Make sure course snapshot pages are not indexed by search engines #}
+    {% if current_page.parent_page.course %}
+        <meta name="robots" content="noindex">
+    {% else %}
+        {{ block.super }}
+    {% endif %}
+{% endblock meta_index_rules %}
+
+{% block meta_opengraph_contextuals %}
+    <meta property="og:title" content="{{ current_page.get_title|truncatechars:65 }}">
+    <meta property="og:url" content="{{ SITE.web_url }}{{ current_page.get_absolute_url }}">
+{% endblock meta_opengraph_contextuals %}
 
 {% block content %}{% spaceless %}
 <div class="course-detail">
