--- a/src/backend/funmooc/templates/social-networks/course-badges.html
+++ b/src/backend/funmooc/templates/social-networks/course-badges.html
@@ -3,13 +3,25 @@
     {% blocktrans asvar shared_subject %}Follow a course online with EDUlib{% endblocktrans %}
     {% blocktrans with title=page_title|safe url=full_page_url asvar shared_sentence %}I just enrolled to the course "{{ title }}" on EDUlib: {{ url }}{% endblocktrans %}
     <div class="social-network-badges">
-        <a href="https://www.facebook.com/EDUlib.org/" target="_blank" class="social-network-badges__item social-network-badges__item--facebook" title="{% trans "Facebook page" %}">
+        <a href="https://www.facebook.com/share.php?u={{ full_page_url }}"
+            class="social-network-badges__item social-network-badges__item--facebook"
+            target="_blank"
+            title="{% trans "Facebook page" %}"
+        >
             <span class="icon-facebook"></span>
         </a>
-        <a href="https://twitter.com/intent/tweet?text={{ shared_sentence|urlencode }}" class="social-network-badges__item social-network-badges__item--twitter" target="_blank" title="{% trans "Share on Twitter" %}">
+        <a href="https://twitter.com/intent/tweet?text={{ shared_sentence|urlencode }}"
+            class="social-network-badges__item social-network-badges__item--twitter"
+            target="_blank"
+            title="{% trans "Share on Twitter" %}"
+        >
             <span class="icon-twitter"></span>
         </a>
-        <a href="mailto:?subject={{ shared_subject }}&amp;body={{ shared_sentence }}" class="social-network-badges__item social-network-badges__item--email" target="_blank" title="{% trans "Share by Email" %}">
+        <a href="mailto:?subject={{ shared_subject }}&amp;body={{ shared_sentence }}"
+            class="social-network-badges__item social-network-badges__item--email"
+            target="_blank"
+            title="{% trans "Share by Email" %}"
+        >
             <span class="icon-email"></span>
         </a>
     </div>
