--- a/src/backend/funmooc/templates/social-networks/footer-badges.html
+++ b/src/backend/funmooc/templates/social-networks/footer-badges.html
@@ -1,8 +1,16 @@
 {% load i18n %}{% spaceless %}
-    <a href="https://www.facebook.com/EDUlib.org/" target="_blank" class="body-footer__brand__badge body-footer__brand__badge--facebook" title="{% trans "Facebook page" %}">
+    <a href="https://www.facebook.com/EDUlib.org/"
+        class="body-footer__brand__badge body-footer__brand__badge--facebook"
+        target="_blank"
+        title="{% trans "Facebook page" %}"
+    >
         <span class="icon-facebook"></span>
     </a>
-    <a href="https://twitter.com/EDUlib_ORG" class="body-footer__brand__badge body-footer__brand__badge--twitter" target="_blank" title="{% trans "Twitter page" %}">
+    <a href="https://twitter.com/EDUlib_ORG"
+        class="body-footer__brand__badge body-footer__brand__badge--twitter"
+        target="_blank"
+        title="{% trans "Twitter page" %}"
+    >
         <span class="icon-twitter"></span>
     </a>
 {% endspaceless %}
